correctly looping through user movements and displaying + removed overflow-x scrollbar on movements)

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #444;
   background-color: #f3f3f3;
   height: 100vh;
@@ -94,7 +94,7 @@ nav {
   gap: 2rem;
 
   /* NOTE This creates the fade in/out anumation */
-  opacity: 0;
+  opacity: 1; /* 1 FOR TESTING */
   transition: all 1s;
 }
 
@@ -127,7 +127,7 @@ nav {
   grid-row: 2 / span 3;
   background-color: #fff;
   border-radius: 1rem;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .movements__row {
